Version 0.2.6
- Changed the ID naming of some of the rendered DOM elements to match the JSF ID naming Scheme

Version 0.2.5 JSMin, ajaxSingle, reRender
- Added JSMin to ResourceLoaderPhaseListener to automatically pack all Javascript files served from JSFlot. This effectively halves the size of all Javascript files transferred to the client. (http://inconspicuous.org/projects/jsmin/jsmin.java)
- Added ajaxSingle for single-chart ajax submit (complete form is not submittet)
- Added reRender attribute to update parts of the DOM tree, identified by the JSF ID attribute (Not the complete ClientID)

Version 0.2.2 Stacked Bars
- Added support for Stacked Bars
- Added a JS function to refresh the chart via an AJAX call. JSFlot.AJAX.RefreshChart('chartID');
- Changed the visualization for drag and drop support
- Changed Time mode to reuse Flotrs Time mode, and added a time format option. 

Version 0.2.1 Support for non-facelets
- Added Tag classes to be able to support non-facelets JSF 1.2 applications

Version 0.2.0 Drag and Drop Support
- Added support for dragging the X-axis and triggering a ValueChangeEvent with the number of X-axis values dragged. 
- Added AJAX support for valueChangeListener, as well as re-drawing of the chart based on the result of the valueChangedEvent
- Added JavaScript library blackbird Javascript library for Javascript Debugging of JSFlot.  
- Updated to Flotr revision 123.

Version 0.1.6 
- X and Y axis labels and titles can be rotated, specified in degrees.
- Fixed a bug where only /faces/* prefix and *.jsf suffix for the Faces Servlet works with loading the JavaScript Resources.  

Version 0.1.5 - Support for Clustered Bar Charts
- Added support for Clustered Bar Charts (replacing the overlay-bar charts)
- Upgraded Flotr to Revision 114
- Added support for markers both globaly and per series.
- Added support to set marker position
- Support for vertical Y-Axis Label
- Support for Crosshair in X, Y or XY directions
