@@ -62,7 +62,9 @@ public class ResourcesRenderer extends Renderer {
 		if (debug != null && debug.equalsIgnoreCase("true")) {
 			renderBlackbird = true;
 			renderBlackbirdCss = true;
-			System.getProperties().put("JSFlotDebug", "true");
+			ComponentRendererUtil.setDebug(true);
+		} else {
+			ComponentRendererUtil.setDebug(false);
 		}
 
 		renderScriptOnce(context, component, writer, renderPrototype, renderBase64, renderExcanvas, renderCanvas2Image, renderCanvastext, renderFlotr, renderBlackbird, renderBlackbirdCss);
